bis "Sende Kundendaten" korrekt

--- a/src/main/webapp/forms/SelectCustomer.html
+++ b/src/main/webapp/forms/SelectCustomer.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <select cam-choices="AVAILABLE_CUSTOMERS"
                 cam-variable-name="CUSTOMER_ID"
-                cam-variable-type="Long">
+                cam-variable-type="Integer">
         </select>
     </div>
 
@@ -52,5 +52,4 @@
                ng-required="CUSTOMER_ID==-1"
                type="text"/>
     </div>
-
 </form>
