- Modell angepasst (war nicht 100% korrekt) - restliche Templates erstellt - bis "Konfiguration erstellen" (CreateConfiguration) fertig

--- a/src/main/webapp/forms/SelectProduct.html
+++ b/src/main/webapp/forms/SelectProduct.html
@@ -1,3 +1,9 @@
 <form name="SelectProduct" role=form>
-    //TODO Add Form
+    <div class="form-group">
+        <label>Bitte Produkt auswählen:</label><br>
+        <select cam-choices="AVAILABLE_PRODUCTS"
+                cam-variable-name="PRODUCT_ID"
+                cam-variable-type="Integer">
+        </select>
+    </div>
 </form>
