--- a/src/main/webapp/forms/CheckAssemblability.html
+++ b/src/main/webapp/forms/CheckAssemblability.html
@@ -1,4 +1,28 @@
-<form name="CheckAssemblability" role=form>
+<form name="CheckAssemblability" role=form xmlns="http://www.w3.org/1999/html">
     //TODO Add Form
     //bool: assemblyPossible
+    <div class="form-group">
+        <label>Kunde</label>
+        <input cam-variable-name="CUSTOMER_NAME"
+               cam-variable-type="String"
+               class="form-control"
+               disabled
+               type="text"/>
+    </div>
+    <div class="form-group">
+        <label>Zusatzwunsch</label>
+        <input cam-variable-name="ADDITIONAL_WISH"
+               cam-variable-type="String"
+               class="form-control"
+               disabled
+               type="text"/>
+    </div>
+    <div class="form-group">
+        <label>Ist der Bau möglich?</label>
+        <select cam-variable-name="assemblyPossible"
+                cam-variable-type="Boolean">
+            <option value="true">Ja</option>
+            <option value="false">Nein</option>
+        </select>
+    </div>
 </form>
