--- a/src/main/webapp/forms/ShowStatus.html
+++ b/src/main/webapp/forms/ShowStatus.html
@@ -1,3 +1,9 @@
 <form name="ShowStatus" role="form">
-    //TODO Add Form
+    <div class="form-group">
+        <input cam-variable-name="CURRENT_STATUS"
+               cam-variable-type="String"
+               class="form-control"
+               disabled
+               type="text"/>
+    </div>
 </form>
