--- a/src/main/webapp/forms/SelectVariant.html
+++ b/src/main/webapp/forms/SelectVariant.html
@@ -37,12 +37,15 @@
     </div>
 
     <p>
+
+    <p>
     <div class="form-group">
-        <label>Haben sie noch andere Wünsche?</label><br>
+        <label>Haben Sie zusätzliche Wünsche?</label><br>
         <input cam-variable-name="ADDITIONAL_WISH"
                cam-variable-type="String"
                class="form-control"
-               type="text"/>
+               type="text"
+               value="keine"/>
     </div>
 
 </form>
