Fertig!!! Bitte noch einmal alles testen.

--- a/src/main/webapp/forms/CheckOffer.html
+++ b/src/main/webapp/forms/CheckOffer.html
@@ -20,10 +20,10 @@
     <div class="form-group">
         <label>Gesamte Kosten</label>
         <input cam-variable-name="TOTAL_COSTS"
-               cam-variable-type="Double"
+               cam-variable-type="String"
                class="form-control"
                disabled
-               type="number"/>
+               type="text"/>
     </div>
 
     <div class="form-group">
