--- a/src/main/webapp/forms/ConfirmOffer.html
+++ b/src/main/webapp/forms/ConfirmOffer.html
@@ -2,10 +2,10 @@
     <div class="form-group">
         <label>Unser Angebot für Ihr E-Bike beträgt:</label>
         <input cam-variable-name="TOTAL_COSTS"
-               cam-variable-type="Double"
+               cam-variable-type="String"
                class="form-control"
                disabled
-               type="number"/>
+               type="text"/>
     </div>
 
     <div class="form-group">
